# kontr-tests

./: .gitignore  .gitmodules  CMakeLists.txt  Configuration.h  Exec.h  Hello.cpp  LICENSE  Language.h  MasterTest.h  README.md  Reporter.h  Session.cpp  Session.h  Templates.cpp  UnitTest.h  Variable.h  kontr-internal.h  kontr.h  macros-types.h  main.cpp  warnings.h
Generator/: Configuration.h  Exec.h  Language.h  MasterTest.cpp  MasterTest.h  Names.h  Session.h  UnitTest.h  Variable.h
docs/: api.md  installation.md  usage.md
tests/: CMakeLists.txt  Execution.cpp  Language.cpp  MasterTest.cpp  Names.cpp  Session.cpp  UnitTest.cpp  Variable.cpp  common.h
